// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar should not render if no active profile 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
      >
        <div
          class="sc-bdnxRM AkeAK mx-auto"
          height="10"
          width="10"
        >
          <svg>
            chevron-left-small.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
          >
            <svg
              height="28"
            >
              payvo-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        >
          <li
            class="flex"
          >
            <a
              class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
              data-ring-focus-margin="-mx-2"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
              data-ring-focus-margin="-mx-2"
              href="/test"
              title="test"
            >
              test
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdnxRM NjstW p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          bell.svg
                        </svg>
                      </div>
                      <div
                        class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                      >
                        <div
                          class="w-2 h-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      double-arrow-right.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8 space-x-4"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-500"
            >
              Your Balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              data-testid="Balance__value"
            >
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
      >
        <div
          class="sc-bdnxRM AkeAK mx-auto"
          height="10"
          width="10"
        >
          <svg>
            chevron-left-small.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
          >
            <svg
              height="28"
            >
              payvo-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        />
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdnxRM NjstW p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          bell.svg
                        </svg>
                      </div>
                      <div
                        class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                      >
                        <div
                          class="w-2 h-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      double-arrow-right.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8 space-x-4"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-500"
            >
              Your Balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              data-testid="Balance__value"
            >
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render as logo-only variant 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1nkmx4c-0 kwMnUP"
  >
    <div
      class="flex relative h-21"
    >
      <div
        class="flex flex-1 px-8 ml-12"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
          >
            <svg
              height="28"
            >
              payvo-logo.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render as logo-only variant 2`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
  >
    <div
      class="flex relative h-21"
    >
      <div
        class="flex flex-1 px-8 ml-12"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
          >
            <svg
              height="28"
            >
              payvo-logo.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render with custom menu 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
      >
        <div
          class="sc-bdnxRM AkeAK mx-auto"
          height="10"
          width="10"
        >
          <svg>
            chevron-left-small.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
          >
            <svg
              height="28"
            >
              payvo-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        >
          <li
            class="flex"
          >
            <a
              class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
              data-ring-focus-margin="-mx-2"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
              data-ring-focus-margin="-mx-2"
              href="/test"
              title="test"
            >
              test
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdnxRM NjstW p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          bell.svg
                        </svg>
                      </div>
                      <div
                        class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                      >
                        <div
                          class="w-2 h-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      double-arrow-right.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8 space-x-4"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-500"
            >
              Your Balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              data-testid="Balance__value"
            >
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render with shadow if there is a scroll 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1nkmx4c-0 kmaEsI"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
      >
        <div
          class="sc-bdnxRM AkeAK mx-auto"
          height="10"
          width="10"
        >
          <svg>
            chevron-left-small.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
          >
            <svg
              height="28"
            >
              payvo-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        />
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 dMZjng"
                data-testid="navbar__buttons--send"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      double-arrow-right.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 dMZjng"
                data-testid="navbar__buttons--receive"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8 space-x-4"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-500"
            >
              Your Balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              data-testid="Balance__value"
            >
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="Profile Avatar"
                      class="object-cover w-11 h-11 bg-center bg-no-repeat bg-cover rounded-full"
                    />
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render with title 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
      >
        <div
          class="sc-bdnxRM AkeAK mx-auto"
          height="10"
          width="10"
        >
          <svg>
            chevron-left-small.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
          >
            <svg
              height="28"
            >
              payvo-logo.svg
            </svg>
          </div>
          <span
            class="text-2xl font-bold"
          >
            Desktop Wallet
          </span>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        />
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdnxRM NjstW p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          bell.svg
                        </svg>
                      </div>
                      <div
                        class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                      >
                        <div
                          class="w-2 h-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      double-arrow-right.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdnxRM NjstW p-1"
                    height="20"
                    width="20"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8 space-x-4"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-500"
            >
              Your Balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              data-testid="Balance__value"
            >
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
